cmake_minimum_required(VERSION 3.13)
project(analyzer)
set(CMAKE_CXX_STANDARD 17)
find_package(LLVM REQUIRED 6.0)
include_directories(${LLVM_INCLUDE_DIR})
link_directories(${LLVM_LIBRARY})
include_directories(${PROJECT_SOURCE_DIR}/include)
set(LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
add_subdirectory(lib)
add_subdirectory(src)