LINK_LIBRARIES(LLVM)
ADD_LIBRARY(util SHARED util.cpp)
ADD_LIBRARY(loopEscape SHARED loopEscape.cpp)
ADD_LIBRARY(blockContainer SHARED blockContainer.cpp)
ADD_LIBRARY(loopFinder SHARED loopFinder.cpp)
ADD_LIBRARY(moduleManager SHARED moduleManager.cpp)
TARGET_LINK_LIBRARIES(loopFinder util loopEscape blockContainer)
TARGET_LINK_LIBRARIES(moduleManager loopFinder)